--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "mapbox-gl": "^2.0.0",
     "react": "17.0.0",
     "react-dom": "17.0.0",
+    "react-query": "^3.4.0",
     "react-scripts": "3.4.0"
   },
   "devDependencies": {
