--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "downshift": "^6.0.10",
     "mapbox-gl": "^2.0.0",
     "react": "17.0.0",
     "react-dom": "17.0.0",
@@ -13,7 +14,7 @@
   },
   "devDependencies": {
     "@types/mapbox-gl": "^2.0.0",
-    "@types/react": "16.9.19",
+    "@types/react": "^17.0.0",
     "@types/react-dom": "16.9.5",
     "node": "^15.4.0",
     "typescript": "3.7.5"
